--- a/server.properties
+++ b/server.properties
@@ -2,3 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
+serverIp = localhost
+port = 9090
+logFile = chatLog.txt
+
