--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\sasho\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat70.properties
+deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat70.properties
 j2ee.server.domain=C:/Users/sasho/AppData/Roaming/NetBeans/8.0.2/tomcat
-j2ee.server.home=C:/Program Files/Java/tomcat/apache-tomcat-7.0.63
-j2ee.server.instance=tomcat70:home=C:\\Program Files\\Java\\tomcat\\apache-tomcat-7.0.63:base=C:\\Users\\sasho\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat
-user.properties.file=C:\\Users\\sasho\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+j2ee.server.home=C:/Users/Admin/Documents/3. semester/block-1/apache-tomcat-7.0.63
+j2ee.server.instance=tomcat70:home=C:\\Users\\Admin\\Documents\\3. semester\\block-1\\apache-tomcat-7.0.63
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
